right aligned buttons fixed

--- a/index.css
+++ b/index.css
@@ -19,6 +19,12 @@
 .dropdown-cursor{ 
     cursor: pointer;
 }
+.login-btn:hover, .register-btn:hover {
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+    background-color: yellow;
+}
 @font-face {
     font-family: 'Epilogue';
     font-style: normal;
